# hive-arena

./: .gitignore  CONTRIBUTING.md  README.md  base.py  providers.py  pyproject.toml
arena/: cli.py  events.py  game.py  wrapper.py
auction/: cli.py  display.py  game.py
dilemma/: cli.py  display.py  game.py
experiments/poker/: batch_persona.py
experiments/poker/profiles/: gambler.yaml  grinder.yaml  maniac.yaml  rock.yaml  shark.yaml  tilter.yaml
lifesim/: cli.py  personas.py  sim.py
poker/: cards.py  cli.py  display.py  engine.py  equity.py  game.py  table.py
tests/: conftest.py  test_auction.py  test_base.py  test_cli_dramatic.py  test_dilemma.py  test_display.py  test_journal.py  test_persona_wiring.py  test_table_talk.py  test_tilt.py
tournaments/: million_dollar.py
tournaments/results/: ANALYSIS.md  README.md  million-dollar-20260518-175121.json  million-dollar-20260518-190423.json  million-dollar-20260518-194540.json  million-dollar-20260518-204202.json  million-dollar-20260518-221112.json
