[project]
name = "hive-arena"
version = "0.1.0"
description = "Head-to-head LLM arena and life simulation — built on Hive"
requires-python = ">=3.11"
dependencies = [
    "hive-agent>=0.2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
arena = "arena.cli:main"
lifesim = "lifesim.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arena", "auction", "dilemma", "lifesim", "poker", "tournaments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402"]
